--- a/5.style.css
+++ b/5.style.css
@@ -1,12 +1,12 @@
-.title[data-v-3f8ff63e] {
+.title[data-v-8ac66d62] {
   font-size: 48px;
   font-weight: 300;
   color: #1a202c;
   line-height: 60px;
 }
-.title__sub[data-v-3f8ff63e] {
+.title__sub[data-v-8ac66d62] {
   font-size: 40px;
-  color: #38b2ac;
+  color: #2d8e8a;
   display: block;
   line-height: 60px;
 }
