--- a/style.css
+++ b/style.css
@@ -1168,3 +1168,52 @@ Markup Example:
   color: #540016;
 }
 
+
+.expand-enter-active,
+.expand-leave-active {
+  transition: height 0.25s ease-in-out;
+  overflow: hidden;
+  transition-property: height;
+}
+.expand {
+  transform: translateZ(0);
+}
+.expand-enter {
+  height: 0;
+}
+.expand-enter,
+.expand-leave-to {
+  height: 0;
+}
+.collapse-transition {
+  transition: 0.3s height ease-in-out, 0.3s padding-top ease-in-out,
+    0.3s padding-bottom ease-in-out;
+}
+
+
+.stories-demo {
+  border: 0;
+  margin-bottom: 2rem;
+  margin-top: 1rem;
+}
+.stories-demo__toolbar {
+  border: 1px solid #f3f3f3;
+  padding: 0.25rem;
+  border-radius: 7px 7px;
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 0.5rem;
+  margin-bottom: -1rem;
+}
+.stories-demo__button {
+  border: 0;
+  padding: 0.2rem;
+  background-color: white;
+  outline: none;
+  cursor: pointer;
+}
+.stories-demo__button:hover {
+  background-color: #efefef;
+  border-radius: 7px 7px;
+}
+
