--- a/7.style.css
+++ b/7.style.css
@@ -1,13 +1,1 @@
-.title[data-v-8ac66d62] {
-  font-size: 48px;
-  font-weight: 300;
-  color: #1a202c;
-  line-height: 60px;
-}
-.title__sub[data-v-8ac66d62] {
-  font-size: 40px;
-  color: #2d8e8a;
-  display: block;
-  line-height: 60px;
-}
-
+.title[data-v-8ac66d62]{font-size:48px;font-weight:300;color:#1a202c;line-height:60px}.title__sub[data-v-8ac66d62]{font-size:40px;color:#2d8e8a;display:block;line-height:60px}
